# Chronobar

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ai-instructions.md  justfile  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_proposal.md  feature_request.md  protocol_question.md
.github/workflows/: ci.yml
.windsurf/workflows/: execute-chronobar-delivery.md
config/defaults/: indicator.yaml  market.yaml  research.yaml  rules.yaml  system.yaml  workspace.yaml
config/schemas/: indicator.schema.json  market.schema.json  research.schema.json  rules.schema.json  system.schema.json  workspace.schema.json
core/: bar_aggregator.py  enums.py  event_engine.py  events.py  exceptions.py  indicators.py  models.py  rule_engine.py  ui_bridge.py
docs/: CONTRIBUTING.md  faq.md  getting_started_for_contributors.md  glossary.md  roadmap.md
docs/core/: README.md  ai_protocol.md  backtest_protocol.md  data_protocol.md  event_protocol.md  gateway_protocol.md  golden_examples.md  plugin_protocol.md  risk_protocol.md  strategy_protocol.md
docs/decisions/: 001-storage-architecture.md  002-desktop-workstation-and-data-flywheel.md
docs/engineering/: README.md  current_phase_and_truth_source.md  delivery_master_plan.md  engineering_baseline.md  implementation_task_packages.md  m1_checklist.md  p1_completion_summary.md  runtime_nonfunctional_baseline.md
docs/system/: README.md  (+6 more)
examples/: README.md  core_loop_demo.py
tests/: test_docs_links.py  test_repo_baseline.py  test_ui_contract_research.py
(+18 files in other folders)
