[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["app*", "core*", "rules*", "config*", "compute*", "storage*", "plugins*", "gateways*", "strategy*"]}}

[project]
name = "chronobar"
version = "0.1.0"
description = "Protocol-driven desktop-first trading platform baseline for Chinese futures traders."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Chronobar Contributors" }
]
dependencies = [
  "pydantic>=2.5,<3",
  "fastapi>=0.110,<1",
  "uvicorn>=0.27,<1",
  "duckdb>=0.10,<2",
  "pyarrow>=14.0,<15",
  "orjson>=3.9,<4",
  "typing-extensions>=4.9,<5",
  "tenacity>=8.2,<9",
  "pyyaml>=6.0,<7",
  "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<6",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<4",
]

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<6",
  "ruff==0.15.11",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<4",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.14"
strict = false
warn_unused_configs = true
show_error_codes = true
exclude = ["tests/"]
explicit_package_bases = true
mypy_path = ["."]
packages = ["core"]
